# scout-cli.rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE.md  README.md  SECURITY.md  flake.nix
.github/: dependabot.yml  labeler.yml
.github/workflows/: test.yml
doc/: openapi.yaml
packaging/: README.md
packaging/aur/: PKGBUILD
packaging/flatpak/: io.github.amkisko.scout-cli.yml
packaging/freebsd/: Makefile  README.md
packaging/gentoo/: README.md
packaging/gentoo/app-misc/scout-cli/: scout-cli-0.1.0.ebuild
packaging/homebrew/: scout-cli.rb
packaging/nix/: default.nix  flake.nix
scout/: Cargo.toml
scout/src/: main.rs  output.rs  tui.rs
scout_lib/: Cargo.toml
scout_lib/src/: client.rs  error.rs  helpers.rs  lib.rs  secret.rs
