[package]
name = "scout"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "ScoutAPM CLI - query apps, endpoints, traces, and metrics"

[[bin]]
name = "scout"
path = "src/main.rs"

[dependencies]
scout_lib = { path = "../scout_lib" }
clap = { version = "4.5.58", features = ["derive", "env"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
crossterm = "0.29.0"
