[package]
name = "scout_lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "ScoutAPM API client library"

[dependencies]
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
base64 = "0.22.1"
chrono = { version = "0.4.43", default-features = false, features = ["clock", "std", "serde"] }
url = "2.5.8"
urlencoding = "2.1.3"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["rt", "macros"] }
